# face-recognition-mirror

./: README.md
face_recognition/: README.md  pyproject.toml  run.py
face_recognition/face_recognition.egg-info/: PKG-INFO  SOURCES.txt
