[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "face-recognition"
version = "0.1.0"
description = "Face recognition"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "deepface",
  "opencv-python",
  "tf-keras"
]

[tool.setuptools]
py-modules = ["run"]
package-dir = {"" = "."}

